@@ -204,7 +204,6 @@ extern "C" {
 
 /* Seen in the wild w/ Magnum Technologies IANA number 5593 */
 /* defined above: IPMI_SUPERMICRO_PRODUCT_ID_X8DTL */
-#define IPMI_SUPERMICRO_PRODUCT_ID_X7SBI_LN4_B 4404
 
 #ifdef __cplusplus
 }
