@@ -1,3 +1,7 @@
+2011-09-21  Albert Chu <chu11@llnl.gov>
+
+	* Remove Magnum X7SBI-LN4 sensor interpretation, not needed.
+
 2011-09-20  Albert Chu <chu11@llnl.gov>
 
 	* Fix use of new interpret library interpretation rules.
